--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -89,6 +89,13 @@
 										</span>
 									</a>
 								</li>
+								<li>
+									<a href="/idpc">
+										<span>
+											IDPC
+										</span>
+									</a>
+								</li>
 							</ul>
 						</li>
 					</ul>
