DSS-4092, add metric into search and advanced search

--- a/web/app/views/index.scala.html
+++ b/web/app/views/index.scala.html
@@ -624,7 +624,7 @@
             </ul>
           </div>
           <div class="col-xs-12">
-            Metric Description:
+            Description:
             <a
               id="metricdesc"
               href="#"
@@ -1372,6 +1372,12 @@
         </button>
         <button
           type="button"
+          class="btn {{if isMetrics 'btn-primary'}} {{unless isMetrics 'btn-default'}}"
+          {{action 'switchSearchToMetric' keyword}}>
+          Metrics
+        </button>
+        <button
+          type="button"
           class="btn {{if isFlows 'btn-primary'}} {{unless isFlows 'btn-default'}}"
           {{action 'switchSearchToFlow' keyword}}>
           Flows
@@ -1454,14 +1460,14 @@
                     <td class="col-xs-12">
                       <div class="dataset-name">
                         <td class="dataset-info">
-                        {{#if isMetric}}
+                        {{#if model.isMetrics}}
                           <i class="fa fa-plus-square-o"></i>
-                          {{#link-to 'metric' dataset}}
+                          {{#link-to 'metric' dataset.id}}
                             {{{dataset.name}}}
                           {{/link-to}}
                         {{else}}
                           <i class="fa fa-database"></i>
-                          {{#link-to 'dataset' dataset}}
+                          {{#link-to 'dataset' dataset.id}}
                             {{{dataset.name}}}
                           {{/link-to}}
                         {{/if}}
@@ -1568,13 +1574,28 @@
                   <td class="col-xs-12">
                     <div class="dataset-name">
                       <td class="dataset-info">
-                        <i class="fa fa-database"></i>
-                        {{#link-to 'dataset' dataset}}
-                          {{{dataset.name}}}
-                        {{/link-to}}
+                        {{#if model.isMetrics}}
+                          <i class="fa fa-plus-square-o"></i>
+			  {{#link-to 'metric' dataset.id}}
+                            {{{dataset.name}}}
+                          {{/link-to}}
+                        {{else}}
+			  <i class="fa fa-database"></i>
+                          {{#link-to 'dataset' dataset.id}}
+                            {{{dataset.name}}}
+                          {{/link-to}}
+                        {{/if}}
                       </td>
                       <p>{{{ dataset.urn }}}</p>
-                      <p>source: {{{ dataset.source }}}</p>
+                      {{#if model.isMetrics}}
+                        {{#if dataset.source}}
+                          <p>source: {{{ dataset.source }}}</p>
+                        {{else}}
+                          <p>source: Metric</p>
+                        {{/if}}
+                      {{else}}
+                        <p>source: {{{ dataset.source }}}</p>
+                      {{/if}}
                       <div class="schematext" style="margin-top:5px;margin-bottom: 10px;">
                         {{{ dataset.schema }}}
                       </div>
