bring the script finder back

--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -89,6 +89,15 @@
 								<i class="fa fa-angle-down"></i>
 							</a>
 							<ul class="dropdown-menu" role="menu">
+								@if(isInternal) {
+									<li>
+										<a href="/scriptFinder">
+											<span>
+												Script Finder
+											</span>
+										</a>
+									</li>
+								}
 								<li>
 									<a href="/schemaHistory">
 										<span>
