--- a/web/app/views/scriptFinder.scala.html
+++ b/web/app/views/scriptFinder.scala.html
@@ -61,10 +61,10 @@
                     <td>
                     </td>
                   </tr>
-                  {{#each script in model.data.scripts}}
+                  {{#each model.data.scripts as |script|}}
                     <tr {{action 'onSelect' script this}} class="script-row">
                       <td class="dataset-info">
-                        <a {{bind-attr href=script.scriptUrl}}>
+                        <a href={{script.scriptUrl}}>
                           {{{script.scriptName}}}
                         </a>
                       </td>
@@ -96,7 +96,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {{#each lineage in lineages}}
+                        {{#each lineages as |lineage|}}
                         <tr ng-repeat="row in lineages">
                           <td>{{ lineage.abstractedObjectName }}</td>
                           <td>{{ lineage.sourceTargetType }}</td>
@@ -120,8 +120,8 @@
 
     </div>
 
-    <script src="@routes.Assets.at("vendors/ember-1.12.0/ember-template-compiler.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("vendors/ember-1.12.0/ember.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("vendors/ember-2.6.2/ember-template-compiler.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("vendors/ember-2.6.2/ember.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("vendors/highcharts/highcharts.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/search.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/scriptFinder.js")" type="text/javascript"></script>
