implement the confidential fields of metadata dashboard

--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -91,6 +91,13 @@
 							<ul class="dropdown-menu" role="menu">
 								@if(isInternal) {
 									<li>
+										<a href="/metadata">
+											<span>
+												Metadata Dashboard
+											</span>
+										</a>
+									</li>
+									<li>
 										<a href="/scriptFinder">
 											<span>
 												Script Finder
