--- a/web/app/views/dashboard.scala.html
+++ b/web/app/views/dashboard.scala.html
@@ -23,11 +23,188 @@
               </div>
             </div>
             <ul id="dashboardtabs" class="nav nav-tabs">
+              <li id="ownershippage">
+                <a id="ownershiplink" data-toggle="tab" href="#ownershiptab">Ownership</a>
+              </li>
+              <li id="descriptionpage">
+                <a id="descriptionlink" data-toggle="tab" href="#descriptiontab">Description</a>
+              </li>
+              <li id="idpcpage">
+                <a id="idpctablink" data-toggle="tab" href="#idpctab">IDPC Privacy</a>
+              </li>
               <li id="confidentialpage">
                 <a id="confidentiallink" data-toggle="tab" href="#confidentialtab">Confidential Fields</a>
               </li>
             </ul>
             <div class="tab-content">
+              <div id="ownershiptab" class="tab-pane">
+              </div>
+              <div id="descriptiontab" class="tab-pane">
+                <div class="row">
+                  <div class="col-xs-12 col-md-4">
+                    <h4>Dataset Description for {{ currentDescriptionUser.displayName }}</h4>
+                    <table class="table table-bordered table-condensed table-hover">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Name</th>
+                          <th class="text-center">Completion</th>
+                          <th class="text-center">Total Datasets</th>
+                          <th class="text-center">Has Description</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>
+                            <img src={{currentDescriptionUser.iconUrl}} title={{currentDescriptionUser.displayName}}
+                              width="25px"
+                              height="25px"/>
+                            <a href='metadata#/dashboard/{{currentDescriptionUser.userName}}' title={{currentDescriptionUser.displayName}}>
+                              {{ currentDescriptionUser.displayName }}
+                            </a>
+                          </td>
+                          <td class="text-center">{{ currentDescriptionUser.completed }}%</td>
+                          <td class="text-center">{{ currentDescriptionUser.potentialDatasets  }}</td>
+                          <td class="text-center">{{ currentDescriptionUser.confirmed }}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <h4>Ticket Roll-Up for Individual User</h4>
+                    <table class="table table-bordered table-condensed table-hover">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Name</th>
+                          <th class="text-center">Completion</th>
+                          <th class="text-center">Total Datasets</th>
+                          <th class="text-center">Has Description</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                          {{#if userNoDescMembers}}
+                            <tr>
+                              <td colspan="5">
+                                <div class="row">
+                                  <div class="col-xs-12 text-center">
+                                    This user has no one that reports to them.
+                                  </div>
+                                </div>
+                              </td>
+                            </tr>
+                          {{else}}
+                            {{#each descriptionOwners as |user|}}
+                              <tr>
+                                <td>
+                                  <img src={{user.iconUrl}} title={{user.displayName}}
+                                    width="25px"
+                                    height="25px"/>
+                                  <a href='metadata#/dashboard/{{user.userName}}' title={{user.displayName}}>
+                                    {{ user.displayName }}
+                                  </a>
+                                </td>
+                                <td class="text-center">{{ user.completed }}%</td>
+                                <td class="text-center">{{ user.potentialDatasets }}</td>
+                                <td class="text-center">{{ user.confirmed }}</td>
+                              </tr>
+                            {{/each}}
+                          {{/if}}
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="col-xs-12 col-md-8">
+                    <div class="row">
+                      <div class="col-xs-9">
+                        <h4>List of Datasets</h4>
+                      </div>
+                      <div class="headerBarFilter pull-right">
+                        <form class="form-inline">
+                          <select id="descShowOption" class="form-control" {{action "optionChanged" on="change"}}>
+                            {{#each descriptionOptions as |option index|}}
+                              {{#if index}}
+                                <option value={{option.option}}>{{option.value}}
+                                </option>
+                              {{else}}
+                                <option selected value={{option.option}}>{{option.value}}
+                                </option>
+                              {{/if}}
+                            {{/each}}
+                          </select>
+                        </form>
+                      </div>
+                    </div>
+                    <div class="search-pagination">
+                      <ul class="pager">
+                        {{#unless descFirst}}
+                          <li class="previous">
+                            <a {{ action "prevDescPage" }}>
+                                &larr; Prev
+                            </a>
+                          </li>
+                        {{/unless}}
+                        <li>
+                          {{ descriptionDatasets.count }} datasets - page {{ descriptionDatasets.page }} of {{ descriptionDatasets.totalPages }}
+                        </li>
+                        {{#unless descLast}}
+                          <li class="next">
+                            <a {{ action "nextDescPage" }}>
+                              Next &rarr;
+                            </a>
+                          </li>
+                        {{/unless}}
+                      </ul>
+                    </div>
+                    <table class="table table-bordered table-condensed table-hover table-striped">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Dataset</th>
+                          <th class="text-center">Fields With Description</th>
+                          <th class="text-center">Owners</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#if descInProgress}}
+                          <tr>
+                            <td colspan="8" class="text-center">
+                              <div class="row">
+                                <div class="col-xs-12">
+                                  <i class="fa fa-spinner spinning fa-4x">
+                                  </i>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                        {{else}}
+                          {{#if userNoDescriptionFields}}
+                            <tr>
+                              <td colspan="8">
+                                <div class="row">
+                                  <div class="col-xs-12 text-center">
+                                    This user has no datasets with confidential fields.
+                                  </div>
+                                </div>
+                              </td>
+                            </tr>
+                          {{else}}
+                            {{#each descriptionDatasets.datasets as |dataset|}}
+                              <tr>
+                                <td>
+                                  <a href="/#/datasets/{{dataset.datasetId}}">
+                                    {{ dataset.datasetName }}
+                                  </a>
+                                </td>
+                                <td class="text-center" style="word-break: break-all;">
+                                  {{ dataset.confidentialFieldList }}
+                                </td>
+                                <td class="text-center">{{ dataset.ownerId }}</td>
+                              </tr>
+                            {{/each}}
+                          {{/if}}
+                        {{/if}}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+              <div id="idpctab" class="tab-pane">
+              </div>
               <div id="confidentialtab" class="tab-pane">
                 <div class="row">
                   <div class="col-xs-12 col-md-4">
@@ -68,7 +245,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                          {{#if userNoMembers}}
+                          {{#if userNoCfMembers}}
                             <tr>
                               <td colspan="5">
                                 <div class="row">
@@ -134,7 +311,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {{#if ticketsInProgress}}
+                        {{#if cfInProgress}}
                           <tr>
                             <td colspan="8" class="text-center">
                               <div class="row">
