--- a/web/app/views/dashboard.scala.html
+++ b/web/app/views/dashboard.scala.html
@@ -114,7 +114,7 @@
                       <div class="col-xs-9">
                         <h4>List of Datasets</h4>
                       </div>
-                      <div class="headerBarFilter pull-right">
+                      <div class="col-xs-3 headerBarFilter">
                         <form class="form-inline">
                           <select id="descShowOption" class="form-control" {{action "optionChanged" on="change"}}>
                             {{#each descriptionOptions as |option index|}}
@@ -129,6 +129,10 @@
                           </select>
                         </form>
                       </div>
+                    </div>
+                    <div class="row">
+                      <div id="pie" class="col-xs-5"></div>
+                      <div id="barchart" class="col-xs-7"></div>
                     </div>
                     <div class="search-pagination">
                       <ul class="pager">
@@ -362,5 +366,7 @@
 
     <script src="@routes.Assets.at("vendors/ember-2.6.2/ember-template-compiler.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("vendors/ember-2.6.2/ember.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("vendors/dagre-d3/lib/d3.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("vendors/d3pie-0.18/d3pie-customized.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/dashboard.js")" type="text/javascript"></script>
   }
